# ollama-chat

./: .dockerignore  .env.example  .gitignore  API_SWAGGER_GUIDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_users_api_keys_request_logs.py  002_conversations_messages.py  003_user_first_last_name.py
app/: __init__.py  deps.py  main.py  proxy.py
app/api/routes/: api_keys.py  auth.py  conversations.py  request_logs.py
app/core/: config.py  security.py
app/db/: __init__.py  base.py  models.py  session.py
app/schemas/: __init__.py  api_key.py  auth.py  conversation.py  request_log.py
app/services/: api_key_service.py
app/static/: chat.html
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: ApiKeyGate.jsx  Chat.jsx  ChatInput.jsx  Message.jsx  ModelSelect.jsx  OllamaIcon.jsx  ProtectedRoute.jsx  Sidebar.jsx  ThemeToggle.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: ApiKeys.jsx  ChatPage.jsx  Layout.jsx  Login.jsx  Register.jsx  RequestLogs.jsx
scripts/: docker-entrypoint.sh
